K3S/monitoring/Tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tautulli
  name: tautulli
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:v2.14.3-ls139
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: tautulli-volume
              mountPath: /config
              subPath: tautulli
      volumes:
        - name: tautulli-volume
          persistentVolumeClaim:
            claimName: tautulli-pvc
