K3S/monitoring/Tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tautulli
  name: tautulli-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: tautulli
  ports:
    - port: 8181
